Fix broken alignment because of alias error on API

--- a/src/module/catalog/src/datasets/escaApiInfo.css
+++ b/src/module/catalog/src/datasets/escaApiInfo.css
@@ -2,6 +2,8 @@
     margin-left: 5px
 }
 .escaApiInfo__aliasButtons {
+    display: flex;
+    flex-wrap: wrap;
     margin-top: 5px;
 }
 .escaApiInfo__aliasButtons .btn{
